force-app/main/default/objects/Extole_Audience_Sync_Log__c/Extole_Audience_Sync_Log__c.object-meta.xml
<CustomObject>
    <label>Extole Audience Sync Log</label>
    <nameField>
        <label>Sync Log ID</label>
        <type>AutoNumber</type>
        <displayFormat>ASL-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Extole Audience Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>