force-app/main/default/objects/Extole_Audience_Sync_Log__c/fields/Audience_Id__c.field-meta.xml
<CustomField>
    <fullName>Audience_Id__c</fullName>
    <label>Audience ID</label>
    <type>Text</type>
    <length>64</length>
</CustomField>