force-app/main/default/objects/Extole_Audience_Sync_Log__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>