force-app/main/default/objects/Extole_Audience_Sync_Log__c/fields/Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Member_Count__c</fullName>
    <label>Member Count</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>