force-app/main/default/objects/Extole_Audience_Sync_Log__c/fields/Operation_Id__c.field-meta.xml
<CustomField>
    <fullName>Operation_Id__c</fullName>
    <label>Operation ID</label>
    <type>Text</type>
    <length>64</length>
</CustomField>