force-app/main/default/objects/Extole_Audience_Sync_Log__c/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>ADD</fullName><default>false</default><label>ADD</label></value>
            <value><fullName>REMOVE</fullName><default>false</default><label>REMOVE</label></value>
            <value><fullName>REPLACE</fullName><default>true</default><label>REPLACE</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>