force-app/main/default/objects/Extole_Audience_Sync_Log__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>SUBMITTED</fullName><default>false</default><label>SUBMITTED</label></value>
            <value><fullName>PREPARING</fullName><default>false</default><label>PREPARING</label></value>
            <value><fullName>BUILDING</fullName><default>false</default><label>BUILDING</label></value>
            <value><fullName>VALIDATING</fullName><default>false</default><label>VALIDATING</label></value>
            <value><fullName>READY</fullName><default>false</default><label>READY</label></value>
            <value><fullName>FAILED</fullName><default>false</default><label>FAILED</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>